2008-07-20  Mark Ellis <mark@mpellis.org.uk>

	* hal-client.c - fixed detection of newly unlocked wm6 device

2008-07-12  Mark Ellis <mark@mpellis.org.uk>

	* added application manager to device info dialog, now
	  depends on liborange etc.

2008-06-24  Mark Ellis <mark@mpellis.org.uk>

	* synce-trayicon.schemas.in - add synce-hal description
	* display N/A in RAM/storage split for WM5
	* correctly delete incorrect password from keyring

2008-05-08  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/synce-trayicon.1: Escaped minus sign, as it is currently being
	used as a hyphen; caught by Lintian.

2008-04-16  Mark Ellis <mark@mpellis.org.uk>

	* check for orphaned WM6 items when deleting partnership
	* if delete partnership selected for a sync item, get the parent
	* fix pointer signedness warning in vdccm gtop

2008-04-15  Mark Ellis <mark@mpellis.org.uk>

	* change in sync-engine dbus api for GetPartnerships

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number.
	* configure.ac.in: Upped deps on libsynce and librapi2.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/synce-trayicon.1: Fixed capitalisation typo.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* Removed spec file.

2008-04-03  Mark Ellis <mark@mpellis.org.uk>

	* more fixes to sync-engine partnerships
	* removed some redundant code in odccm-client

2008-03-25  Mark Ellis <mark@mpellis.org.uk>

	* correction to setting dccm in prefs window

2008-03-22  Mark Ellis <mark@mpellis.org.uk>

	* access list of sync item keys correctly

2008-03-20  Mark Ellis <mark@mpellis.org.uk>

	* correct sorting of sync item type keys
	* check for presence of g_hash_table_get_keys()

2008-03-19  Mark Ellis <mark@mpellis.org.uk>

	* create and remove sync-engine partnerships in device info

2008-03-16  Mark Ellis <mark@mpellis.org.uk>

	* retrieve sync_items from sync_engine partnership as g_value boxed
	* remove confusing warning about device not found in